kubernetes/eks-prd-01/deployment-django.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sniper-backend
  labels:
    app: sniper-backend
    part-of: pdpj
spec:
  selector:
    matchLabels:
      app: sniper-backend
      part-of: pdpj
  template:
    metadata:
      labels:
        app: sniper-backend
        part-of: pdpj
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: sniper-backend
                  part-of: pdpj
              topologyKey: kubernetes.io/hostname
      containers:
      - name: sniper-backend
        image: registry.cnj.jus.br/pdpj/sniper-backend-prd:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 6
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 20
          periodSeconds: 30
          timeoutSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "2000m"
      imagePullSecrets:
      - name: registry-cnj
